Another set of small fixes